--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,9 @@ MANIFEST
 *.csv
 *.
 *.qmd
+*.tif
+*.tiff
+*.tif*
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
